# datbar_web

./: .gitignore  Cargo.toml  Makefile  README.md  app.py
frontend/: admin.html  index.html  package-lock.json  package.json  test.html  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/about/: About.svelte
frontend/src/admin/: main.ts
frontend/src/barplan/: Barplan.svelte  Barvagt.svelte  script.ts  type.ts  vagt.svelte
frontend/src/bartenders/: Bartenders.svelte  script.ts
frontend/src/bestyrelse/: Bestyrelse.svelte  BestyrelsesElement.svelte  Member.svelte  types.ts
frontend/src/events/: EventComponent.svelte  Events.svelte  time.ts
frontend/src/forside/: Forside.svelte
frontend/src/guides/: Guides.svelte
frontend/src/lib/: Navbar.svelte  NavbarElement.svelte  types.ts
frontend/src/testpage/: Test.svelte
frontend/src/udlejning/: Anlaeg.svelte
src/: api.rs  database.rs  main.rs
src/api/: barplan.rs
src/database/: db_mysql.rs  db_socket.rs
src/frontend/: index.html  vite.config.ts
src/frontend/src/: App.svelte
src/frontend/src/bartenders/: Bartenders.svelte
src/frontend/src/forside/: Forside.svelte
src/frontend/src/lib/: Navbar.svelte  NavbarElement.svelte  types.ts
src/frontend/src/testpage/: main.ts
