[package]
name = "datbar_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.4"
actix-web = "4.4.1"
serde = { version = "1.0.195", features = ["derive"] }
tokio = {version = "1.35.1", features = ["rt-multi-thread"]}
