[package]
name = "datbar_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.4.1"
anyhow = "1.0.79"
chrono = { version = "0.4.33", features = ["serde"] }
env_logger = "0.10.1"
log = "0.4.20"
mysql = "24.0.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }

